--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,11 @@
         android:theme="@style/Theme.BreakoutGame"
         tools:targetApi="31">
         <activity
+            android:name=".GameOver"
+            android:exported="false"
+            android:label="@string/title_activity_game_over"
+            android:theme="@style/Theme.BreakoutGame.NoActionBar" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
